--- a/test.html
+++ b/test.html
@@ -1,2 +1,3 @@
 
-Parse error: parse error in /Users/Jp/Repos/DbLab3/index.php on line 11
+Warning: mysql_connect(): Access denied for user 'jgallegos'@'24.41.224.8' (using password: YES) in /Users/Jp/Repos/DbLab3/index.php on line 11
+Error connecting to mysql server: Access denied for user 'jgallegos'@'24.41.224.8' (using password: YES)
